alignment fixes

--- a/css/work-hspp.css
+++ b/css/work-hspp.css
@@ -50,7 +50,7 @@ h2 {
   font-weight: 700;
   font-size: 2.4rem;
   position: absolute;
-  bottom: -60px;
+  bottom: -80px;
   right: 0;
   border: 0;
   cursor: pointer;
@@ -141,59 +141,47 @@ h2 {
   }
 
   @media screen and (max-width: 1480px) {
-
     .title-section {
       grid-template-columns: 1fr;
     }
-
     .masthead {
       position: relative;
       padding-top: 100px;
     }
-
     .date {
       float: none;
       display: inline-block;
     }
-
   }
 
   @media screen and (max-width: 1024px) {
-
     .title-section-container .fas {
       font-size: 5rem;
       padding: 0 45px 20px 0;
     }
-
   }
 
   @media screen and (max-width: 768px) {
-
     .title-section-container .fas {
       font-size: 4rem;
       padding: 0 35px 20px 0;
     }
-
     .type {
       display: block;
       padding-right: 0;
       padding-bottom: 20px;
       border-left: none;
     }
-
     .type ul {
       padding-left: 0;
     }
-
     .date {
       display: block;
       border-left: none;
     }
-
     .date ul {
       padding-left: 0;
     }
-
   }
 
   /* END Title */
@@ -246,63 +234,54 @@ Section 1
   height: 100%;
 }
 
-.section-1 p {
+.section-1-copy p {
   position: relative;
   top: 50%;
   transform: translateY(-50%);
   -webkit-transform: translateY(-50%);
+  margin-top: 0;
+  margin-bottom: 0;
 }
 
 
 @media screen and (max-width: 1024px) {
-
   .section-1-grid {
     grid-template-columns: 1fr;
   }
-
 }
 
 @media screen and (max-width: 768px) {
-
   .section-1-grid {
     row-gap: 40px;
   }
-
   .section-1-images {
     width: 360px;
     height: 420px;
     position: relative;
     margin: 0 auto;
   }
-
   .section-1 img {
     width: 180px;
   }
-
   .section-1 p {
     position: relative;
     top: 0;
     transform: translateY(0);
     -webkit-transform: translateY(0);
   }
-
   .section-2-content {
     padding: 0;
   }
-
 }
 
 @media screen and (max-width: 480px) {
-
   .section-1-images {
     width: 100%;
     height: 400px;
   }
-
   .section-1 img {
     width: 160px;
   }
-
 }
 
 /* END Section 1 */
@@ -332,30 +311,24 @@ Section 2
 
 
 @media screen and (max-width: 1024px) {
-
   .section-2-grid {
     grid-template-columns: 1fr;
   }
-
 }
 
 @media screen and (max-width: 768px) {
-
   .section-2-grid {
     grid-template-columns: 1fr;
   }
-
   .section-2 .fas, .section-2 .far {
     position: relative;
     padding-top: 0;
     padding-left: 0;
     padding-bottom: 20px;
   }
-
   .section-2-content {
     padding: 0;
   }
-
 }
 
 /* END Section 2 */
@@ -508,7 +481,7 @@ Hello section
 }
 
 .contact-form {
-  padding: 100px 0;
+  padding: 60px 0 180px 0;
 }
 
 .contact-form .grid-item {
@@ -527,11 +500,9 @@ form {
 }
 
 .hello {
-  border-bottom: 10px solid #FC1579;
   font-size: 6.4rem;
   font-weight: 700;
   margin: 0;
-  height: 80px;
 }
 
 .contact-form form input, .contact-form form textarea {
@@ -540,13 +511,14 @@ form {
   color: #fff;
   background: transparent;
   border: none;
-  border-bottom: 10px solid #0062F4;
+
   margin-right: 10px;
   padding-bottom: 27px;
 }
 
 .form-hello {
   grid-area: hello;
+  border-bottom: 15px solid #FC1579;
 }
 
 .form-txt {
@@ -555,11 +527,10 @@ form {
 
 .form-email {
   grid-area: email;
-  margin-bottom: 40px;
+  border-bottom: 15px solid #0062F4;
 }
 
 @media screen and (max-width: 768px) {
-
   .form-grid {
     grid-template-columns: 1fr;
     grid-template-areas:
@@ -567,11 +538,12 @@ form {
       "txt"
       "email";
   }
-
   .form-hello {
-    margin-bottom: 40px;
+    padding-bottom: 40px;
   }
-
+  .form-txt {
+    padding-top: 40px;
+  }
 }
 
 /* END Hello section */
